--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ Flask-SQLAlchemy==2.5.1
 Flask-Login==0.5.0
 Flask-WTF==0.15.1
 Werkzeug==2.0.1
-pandas==1.3.3
+pandas==1.5.3
 openpyxl==3.0.9
 python-dotenv==0.19.0
-gunicorn==20.1.0 
+gunicorn==20.1.0
+numpy==1.24.3 
